syntax = "proto3";

option csharp_namespace = "ProjectService.Tests";

package projects;

service Projects {
  rpc CreateProject (CreateProjectRequest) returns (CreateProjectReply);
  rpc UpdateProject (UpdateProjectRequest) returns (UpdateProjectReply);
  rpc DeleteProject (DeleteProjectRequest) returns (DeleteProjectReply);
  rpc GetProject (GetProjectRequest) returns (GetProjectReply);
  rpc GetAllProjects (GetAllProjectsRequest) returns (GetAllProjectsReply);
}

message CreateProjectRequest {
  string title = 1;
  string details = 2;
  string user_id = 3;  
}

message CreateProjectReply {
  string project_id = 1;
}


message GetAllProjectsRequest{
	string user_id = 1;
}

message GetAllProjectsReply{
	repeated ProjectShortInfo projects = 1;
}

message GetProjectRequest{
	string project_id = 1;
}

message GetProjectReply{
	string id = 1;
	string title = 2;
	string details = 3;
}

message UpdateProjectRequest{
	string id = 1;
	string title = 2;
	string details = 3;
}

message UpdateProjectReply{
	string project_id  = 1;
}

message DeleteProjectRequest{
	string project_id  = 1;
}

message DeleteProjectReply{
	string project_id  = 1;
}

message ProjectShortInfo{
	string id = 1;
	string title = 2;
	string details = 3;
}
